空耳メーカー for jsdo.it ver 0.04

--- a/cx20/wYpR/index.html
+++ b/cx20/wYpR/index.html
@@ -17,25 +17,24 @@
 <script src="../../assets/y/l/1/q/yl1qj.js"></script>
 
 <!-- Japanese Text -->
-<textarea id="txtJapanese" cols="50" rows="9">ふる池や、かわず飛び込む、水の音。</textarea>
+<p><textarea id="txtJapanese" cols="50" rows="9">ふる池や、かわず飛び込む、水の音。</textarea></p>
 
 <!-- Convert Button -->
-<input type = "button" onclick="convJapaneseToSoramimiEnglish()" value="「日本語」→「英語（空耳）」変換" />
+<p><input type = "button" onclick="convJapaneseToSoramimiEnglish()" value="「日本語」→「英語（空耳）」変換" /></p>
 
 <!-- English Text -->
-<textarea id="txtEnglish" cols="50" rows="9">fool e kay yah, car wads toe be coe moo, mids noe toe.</textarea>
+<p><textarea id="txtEnglish" cols="50" rows="9">fool e kay yah, car wads toe be coe moo, mids noe toe.</textarea></p>
 
 <!-- Web Speech API 用 -->
-<input type="button" onclick="speakSoramimiEnglishBySpeechApi()" value="Web Speech API による読み上げ" />（Chrome のみ対応）
-<font size="2" color="#ff0000">New!</font>
+<p><input type="button" onclick="speakSoramimiEnglishBySpeechApi()" value="Web Speech API による読み上げ" />（Chrome のみ対応）<font size="2" color="#ff0000">New!</font></p>
 
 <!-- Speak.js 用 -->
 <div id="audio"></div>
-<input type="button" onclick="speakSoramimiEnglish()" value="Speak.js による読み上げ" />（Firefox, Chrome のみ対応） <br>
+<p><input type="button" onclick="speakSoramimiEnglish()" value="Speak.js による読み上げ" />（Firefox, Chrome のみ対応） </p>
 
 <!-- Google TTS 用 -->
 <div id="audio_google_tts"></div>
-<input type="button" onclick="speakSoramimiEnglishByGoogleTTS()" value="Google TTS による読み上げ" />（100文字まで。IE も対応） 
+<p><input type="button" onclick="speakSoramimiEnglishByGoogleTTS()" value="Google TTS による読み上げ" />（100文字まで。IE も対応） </p>
 
 <!-- Begin Yahoo! JAPAN Web Services Attribution Snippet -->
     <a href="http://developer.yahoo.co.jp/about">
