空耳モールス信号メーカー for jsdo.it ver 0.01

--- a/cx20/kpoX/index.html
+++ b/cx20/kpoX/index.html
@@ -15,10 +15,10 @@
 
 <script src="../../assets/y/l/1/q/yl1qj.js"></script>
 
-<textarea id="txtJapanese" cols="50" rows="9">いろは</textarea>
-<input type = "button" onclick="convJapaneseToSoramimiEnglish()" value="「日本語」→「モールス（空耳）」変換" />
-<textarea id="txtEnglish" cols="50" rows="9">.- .-.- -... </textarea>
-<input type = "button" onclick="onClickPlayMorse()" value="モールス再生" /><br />
+<p><textarea id="txtJapanese" cols="50" rows="9">いろは</textarea></p>
+<p><input type = "button" onclick="convJapaneseToSoramimiEnglish()" value="「日本語」→「モールス（空耳）」変換" /></p>
+<p><textarea id="txtEnglish" cols="50" rows="9">.- .-.- -... </textarea></p>
+<p><input type = "button" onclick="onClickPlayMorse()" value="モールス再生" /></p>
 <!-- Begin Yahoo! JAPAN Web Services Attribution Snippet -->
     <a href="http://developer.yahoo.co.jp/about">
     <img src="http://i.yimg.jp/images/yjdn/yjdn_attbtn2_105_17.gif" width="105" height="17" title="Webサービス by Yahoo! JAPAN" alt="Webサービス by Yahoo! JAPAN" border="0" style="margin:15px 15px 15px 15px"></a>
