[WebGL] lightgl.js + csg.js を試してみるテスト

--- a/cx20/8BYg/index.html
+++ b/cx20/8BYg/index.html
@@ -41,15 +41,15 @@ void main()
 
 <!-- lightgl.js -->
 <!-- <script src="http://jsrun.it/assets/l/F/H/a/lFHat"></script> -->
-<script src="http://evanw.github.io/lightgl.js/lightgl.js"></script>
+<script src="https://evanw.github.io/lightgl.js/lightgl.js"></script>
 
 <!-- csg.js -->
 <!-- <script src="http://jsrun.it/assets/u/P/a/3/uPa3Y"></script> -->
-<script src="http://evanw.github.io/csg.js/csg.js"></script>
+<script src="https://evanw.github.io/csg.js/csg.js"></script>
 
 <!-- viewer.js -->
 <!-- <script src="http://jsrun.it/assets/m/K/I/r/mKIrO"></script> -->
-<script src="http://evanw.github.io/csg.js/viewer.js"></script>
+<script src="https://evanw.github.io/csg.js/viewer.js"></script>
 
 
 <script type="text/javascript" src="index.js"></script>
