[WebGL] lightgl.js を試してみるテスト（その３）

--- a/cx20/elUj/index.html
+++ b/cx20/elUj/index.html
@@ -29,7 +29,7 @@ void main() {
 
 <!-- lightgl.js -->
 <!-- <script src="http://jsrun.it/assets/l/F/H/a/lFHat"></script> -->
-<script src="http://evanw.github.io/lightgl.js/lightgl.js"></script>
+<script src="https://evanw.github.io/lightgl.js/lightgl.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
