[WebGL] Grimoire.js + ポリゴンで３次元関数を表示してみるテスト

--- a/cx20/8e5I/index.html
+++ b/cx20/8e5I/index.html
@@ -21,7 +21,7 @@
     <goml.components>
     </goml.components>
   <geometry type="custom" name="c1"/>
-  <import-material typeName="rotateShader" src="../../assets/g/2/J/j/G2Jj2.sort"/>
+  <import-material typeName="rotateShader" src="../../assets/g/2/J/j/g2Jj2.sort"/>
     <scene>
       <camera>
         <camera.components>
