[簡易版] WebGL 2.0 でドット絵を描いてみるテスト（gl.POINTS 編）

--- a/cx20/pEUk/index.html
+++ b/cx20/pEUk/index.html
@@ -16,12 +16,13 @@
 in  vec3 position;
 in  vec4 color;
 out vec4 vColor;
+uniform float scale;
 
 void main()
 {
     vColor = color;
     gl_Position = vec4(position, 1.0);
-    gl_PointSize = 12.0;
+    gl_PointSize = 12.0 * scale;
 }
 </script>
 
