Matter.js + Three.js でドット絵を物理演算してみるテスト（その２）

--- a/cx20/68Nl/index.html
+++ b/cx20/68Nl/index.html
@@ -14,10 +14,12 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- Three.js -->
-<script src="https://threejs.org/build/three.min.js"></script>
+<!-- <script src="https://threejs.org/build/three.min.js"></script> -->
+<script src="https://cx20.github.io/gltf-test/libs/three.js/r109dev/three.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+<!-- <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script> -->
+<script src="https://cx20.github.io/gltf-test/libs/three.js/r109dev/controls/OrbitControls.js"></script>
 
 <!-- matter-0.8.0.js -->
 <script type="text/javascript" src="../../assets/u/C/B/O/uCBOD.js"></script>
