[WebGL] PhiloGL を試してみるテスト

--- a/cx20/bfyq/index.html
+++ b/cx20/bfyq/index.html
@@ -32,7 +32,8 @@ void main() {
 
 <!-- PhiloGL.js ver 1.5.2 -->
 <!-- <script src="http://jsrun.it/assets/n/5/t/p/n5tpC"></script> -->
-<script src="http://www.senchalabs.org/philogl/PhiloGL/build/PhiloGL.js"></script>
+<!-- <script src="http://www.senchalabs.org/philogl/PhiloGL/build/PhiloGL.js"></script> -->
+<script src="https://rawcdn.githack.com/senchalabs/philogl/09ff577c792373b5ac2113e75c057c19d4d740f9/build/PhiloGL.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
