--- a/cx20/S1FS/index.html
+++ b/cx20/S1FS/index.html
@@ -15,7 +15,7 @@
 <!-- x3dom.js -->
 <script src="https://www.x3dom.org/download/x3dom.js"></script>
 
-<x3d width='465px' height='465px'> 
+<x3d width="100%" height="100%"> 
   <scene>
     <viewpoint description='IndexedTriangleStripSet view' position='0 0 2.5'></viewpoint>
     <background skyColor='1 1 1'></background>
