--- a/cx20/uDg8/index.html
+++ b/cx20/uDg8/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- oimo.js 1.2 -->
-<script src="../../assets/a/E/n/5/aEn5I.js"></script>
+<script src="../../assets/A/E/n/5/AEn5I.js"></script>
 
 <!-- glboost.js 2016/02/22 (Change sphere function parameter) -->
 <!-- <script src="http://jsrun.it/assets/s/V/a/K/sVaKn"></script> -->
