GLBoost.js + Cannon.js でドット絵を落下させてみるテスト

--- a/cx20/GDXr/index.html
+++ b/cx20/GDXr/index.html
@@ -15,10 +15,7 @@
 <!-- cannon.js v0.6.2 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.js"></script>
 
-<!-- glboost.js 2016.10.24 -->
-<!-- <script src="http://jsrun.it/assets/a/N/P/w/aNPw2"></script> -->
-<!-- glboost.js 2016.10.29 -->
-<script src="https://cdn.rawgit.com/emadurandal/GLBoost/b1ffc4106f2f7c4feb29d436a68e5c366efb7768/build/glboost.js"></script>
+<script src="https://rawcdn.githack.com/emadurandal/GLBoost/c96096d983475f49fcf8347662be75c00b7c83d7/build/glboost.js"></script>
 
 <canvas id="world" width="465" height="465"></canvas>
 
