--- a/cx20/anpf/index.html
+++ b/cx20/anpf/index.html
@@ -15,8 +15,8 @@
 
 <canvas id="renderCanvas"></canvas>
 
-<!-- babylon.js v2.0 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/e9900698/dist/previous%20releases/babylon.2.0.js"></script>
+<!-- babylon.js -->
+<script src="https://rawcdn.githack.com/cx20/gltf-test/3d232c489c0aebb21c745945616a8f46cab26a3d/libs/babylonjs/4.0.3/babylon.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
