--- a/cx20/MNU4/index.html
+++ b/cx20/MNU4/index.html
@@ -13,14 +13,8 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
-<!-- playcanvas.js v0.223.0-dev -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e63efa65/libs/playcanvas/v0.223.0-dev/playcanvas-latest.js"></script>
-
-<!-- gltf-loader.js -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/e63efa65/libs/playcanvas/v0.223.0-dev/playcanvas-gltf.js"></script> -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/d5ea5002/libs/playcanvas/v0.223.0-dev/playcanvas-gltf.js"></script> -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/889675a8/libs/playcanvas/v0.223.0-dev/playcanvas-gltf.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e63efa65/libs/playcanvas/v0.223.0-dev/orbit-camera.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/aeae18583e4d3695744f98661314fd0249c82736/libs/playcanvas/v1.25.0-dev/playcanvas-latest.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/aeae18583e4d3695744f98661314fd0249c82736/libs/playcanvas/v1.25.0-dev/playcanvas-gltf.js"></script>
 
 <!-- The canvas element -->
 <canvas id="application"></canvas>
