three.js を試してみるテスト（BufferGeometry編）（その２）

--- a/cx20/vryW/index.html
+++ b/cx20/vryW/index.html
@@ -34,8 +34,8 @@ void main() {
 
 <div id="container"></div>
 
-<!-- three.min.js r79 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+<!-- three.min.js r110 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
