--- a/cx20/dutP/index.html
+++ b/cx20/dutP/index.html
@@ -14,9 +14,8 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <div id="container"></div>
 
-<!-- three.js r71 -->
-<!-- <script src="http://jsrun.it/assets/r/G/y/n/rGynk"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js"></script>
+<!-- three.js r110 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
