--- a/cx20/EJ3c/index.html
+++ b/cx20/EJ3c/index.html
@@ -14,15 +14,9 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <div id="container"></div>
 
-<!-- three.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/three.js/r95dev/three.js"></script>
-<!-- OrbitControls.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/three.js/r95dev/controls/OrbitControls.js"></script>
-<!-- DRACOLoader.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/three.js/r95dev/draco/DRACOLoader.js"></script>
-<!-- GLTFLoader.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/three.js/r95dev/GLTFLoader.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r110/examples/js/controls/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r110/examples/js/loaders/GLTFLoader.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
