--- a/cx20/OjW2A/index.html
+++ b/cx20/OjW2A/index.html
@@ -14,10 +14,8 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <canvas id="renderCanvas"></canvas>
 
-<script src="https://cdn.rawgit.com/cx20/gltf-test/7af4f399/libs/babylonjs/3.3.0dev/babylon.max.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/7af4f399/libs/babylonjs/3.3.0dev/babylonjs.loaders.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/7af4f399/libs/babylonjs/3.3.0dev/babylon.glTF2Serializer.js"></script>
-
+<script src="https://rawcdn.githack.com/cx20/gltf-test/7391b63aae4d180d4dbb4465bf73153b8c61775f/libs/babylonjs/4.0.3/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/7391b63aae4d180d4dbb4465bf73153b8c61775f/libs/babylonjs/4.0.3/babylonjs.loaders.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
