--- a/cx20/2Nrf/index.html
+++ b/cx20/2Nrf/index.html
@@ -16,7 +16,7 @@
 <script src="../../assets/g/4/V/1/g4V1g.js"></script>
 
 <!-- vox.js v1.0.1 -->
-<script src="https://cdn.rawgit.com/daishihmr/vox.js/1.0.1/build/vox.min.js"></script>
+<script src="https://rawcdn.githack.com/daishihmr/vox.js/1.1.0/build/vox.min.js"></script>
 
 <canvas id="world" width="465" height="465"></canvas>
 
