--- a/cx20/IKJa/index.html
+++ b/cx20/IKJa/index.html
@@ -26,7 +26,7 @@
 <script src="../../assets/l/P/C/w/lPCwL.js"></script>
 
 <!-- vox.js v1.0.1 -->
-<script src="https://cdn.rawgit.com/daishihmr/vox.js/1.0.1/build/vox.min.js"></script>
+<script src="https://rawcdn.githack.com/daishihmr/vox.js/1.1.0/build/vox.min.js"></script>
 
 <div id="container"></div>
 
