--- a/cx20/ed5q/index.html
+++ b/cx20/ed5q/index.html
@@ -19,7 +19,7 @@
 <script src="../../assets/e/M/a/U/eMaUz.js"></script>
 
 <!-- vox.js v1.0.1 -->
-<script src="https://cdn.rawgit.com/daishihmr/vox.js/1.0.1/build/vox.min.js"></script>
+<script src="https://rawcdn.githack.com/daishihmr/vox.js/1.1.0/build/vox.min.js"></script>
 
 <canvas id="world" width="465" height="465"></canvas>
 
