--- a/cx20/iEi8/index.html
+++ b/cx20/iEi8/index.html
@@ -49,7 +49,7 @@ void main() {
 <script src="https://rawcdn.githack.com/mrdoob/three.js/r72/build/three.js"></script>
 
 <!-- vox.js v1.0.1 -->
-<script src="https://cdn.rawgit.com/daishihmr/vox.js/1.0.1/build/vox.min.js"></script>
+<script src="https://rawcdn.githack.com/daishihmr/vox.js/1.1.0/build/vox.min.js"></script>
 
 <!-- OrbitControls.js -->
 <script src="../../assets/e/w/8/e/ew8eQ.js"></script>
