--- a/cx20/u80n/index.html
+++ b/cx20/u80n/index.html
@@ -16,7 +16,7 @@
 <!-- three.js r71 -->
 <script src="https://cdn.rawgit.com/mrdoob/three.js/r71/build/three.min.js"> </script>
 <!-- vox.js v1.0.1 -->
-<script src="https://cdn.rawgit.com/daishihmr/vox.js/1.0.1/build/vox.min.js"></script>
+<script src="https://rawcdn.githack.com/daishihmr/vox.js/1.1.0/build/vox.min.js"></script>
 <!-- OrbitControls.js -->
 <script src="https://cdn.rawgit.com/mrdoob/three.js/r71/examples/js/controls/OrbitControls.js"></script>
 
