--- a/cx20/4MPF/index.html
+++ b/cx20/4MPF/index.html
@@ -36,10 +36,10 @@
 <script src="https://cdn.rawgit.com/cx20/gltf-test/46ce813a/libs/Hilo3d/1.5.97/draco_decoder.js"></script>
 <script src="https://cdn.rawgit.com/cx20/gltf-test/46ce813a/libs/Hilo3d/1.5.97/DracoLoader.js"></script>
 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/98abc135/libs/Hilo3d/1.5.98/Hilo3d.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/98abc135/libs/Hilo3d/1.5.98/OrbitControls.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/98abc135/libs/Hilo3d/1.5.98/draco_decoder.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/98abc135/libs/Hilo3d/1.5.98/DracoLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/Hilo3d/1.13.18/Hilo3d.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/Hilo3d/1.13.18/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/Hilo3d/1.13.18/draco_decoder.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/Hilo3d/1.13.18/DracoLoader.js"></script>
 
 <div id='loading'>loading 0% ...</div>
 <div id="container"></div>
