--- a/cx20/ovtd/index.html
+++ b/cx20/ovtd/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- x3dom.js -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/e63efa65/libs/x3dom/1.7.3dev/x3dom.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/x3dom/1.7.3dev/x3dom.js"></script> -->
 <script src="https://cdn.rawgit.com/cx20/gltf-test/666f99f4/libs/x3dom/1.7.3dev/x3dom.js"></script>
 
 <x3d id="x3d" width="100%" height="100%"> 
