--- a/cx20/kzNO/index.html
+++ b/cx20/kzNO/index.html
@@ -21,11 +21,11 @@
 <script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/playcanvas-anim.js"></script>
 
 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/5f79f355/libs/playcanvas/v1.6.4-dev/playcanvas-latest.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/5f79f355/libs/playcanvas/v1.6.4-dev/playcanvas-gltf.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/5f79f355/libs/playcanvas/v1.6.4-dev/draco-decoder.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/5f79f355/libs/playcanvas/v1.6.4-dev/orbit-camera.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/5f79f355/libs/playcanvas/v1.6.4-dev/playcanvas-anim.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.4-dev/playcanvas-latest.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.4-dev/playcanvas-gltf.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.4-dev/draco-decoder.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.4-dev/orbit-camera.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.4-dev/playcanvas-anim.js"></script>
 
 <!-- The canvas element -->
 <canvas id="application"></canvas>
