Changed from rawgit to githack

--- a/cx20/ERqU/index.html
+++ b/cx20/ERqU/index.html
@@ -13,12 +13,12 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- playcanvas.js v0.225.0-dev -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a554eaa9/libs/playcanvas/v0.225.0-dev/playcanvas-latest.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v0.225.0-dev/playcanvas-latest.js"></script>
 
 <!-- gltf-loader.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a554eaa9/libs/playcanvas/v0.225.0-dev/playcanvas-anim.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a554eaa9/libs/playcanvas/v0.225.0-dev/playcanvas-gltf.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a554eaa9/libs/playcanvas/v0.225.0-dev/orbit-camera.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v0.225.0-dev/playcanvas-anim.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v0.225.0-dev/playcanvas-gltf.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v0.225.0-dev/orbit-camera.js"></script>
 
 <!-- The canvas element -->
 <canvas id="application"></canvas>
