Changed from rawgit to githack

--- a/cx20/U1kH/index.html
+++ b/cx20/U1kH/index.html
@@ -15,10 +15,10 @@
 <canvas id="c" width="465" height="465"></canvas>
 
 <!-- babylon.js v3.1 alpha -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/5465cc37/libs/babylonjs/3.1.0dev/babylon.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.js"></script> -->
 
 <!-- babylon.glTFFileLoader.js -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/5465cc37/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script> -->
 
 <!-- babylon.js v3.2 -->
 <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.2.0dev/babylon.js"></script>
