--- a/cx20/2I0b/index.html
+++ b/cx20/2I0b/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- Cesium.js v1.36 -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/5465cc37/libs/cesium/1.36/Cesium.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/cesium/1.36/Cesium.js"></script> -->
 <!-- Cesium.js v1.43 -->
 <!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/cesium/1.43/Cesium.js"></script> -->
 <!-- Cesium.js v1.44 -->
