Changed from rawgit to githack

--- a/cx20/KavT/index.html
+++ b/cx20/KavT/index.html
@@ -14,10 +14,10 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- three.js r86dev -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/34d9fe61/libs/three.js/r86dev/three.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r86dev/three.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/34d9fe61/libs/three.js/r86dev/controls/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r86dev/controls/OrbitControls.js"></script>
 
 <!-- ThreeCSG.js -->
 <script src="../../assets/m/L/x/k/mLxkE.js"></script>
