--- a/cx20/ydru/index.html
+++ b/cx20/ydru/index.html
@@ -17,10 +17,10 @@
 <script src="../../assets/k/3/H/y/k3Hyn.js"></script>
 
 <!-- three.js r88dev -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e5c46e50/libs/three.js/r88dev/three.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r88dev/three.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e5c46e50/libs/three.js/r88dev/controls/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r88dev/controls/OrbitControls.js"></script>
 
 <textarea id="mml" cols="60" rows="6"></textarea><br>
 
