--- a/cx20/ahsW/index.html
+++ b/cx20/ahsW/index.html
@@ -13,13 +13,13 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- three.js r88dev -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e5c46e50/libs/three.js/r88dev/three.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r88dev/three.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e5c46e50/libs/three.js/r88dev/controls/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r88dev/controls/OrbitControls.js"></script>
 
 <!-- GLTFLoader.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e5c46e50/libs/three.js/r88dev/GLTFLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r88dev/GLTFLoader.js"></script>
 
 <div id="container"></div>
 
