--- a/cx20/Ws8y/index.html
+++ b/cx20/Ws8y/index.html
@@ -14,9 +14,9 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <canvas id="renderCanvas"></canvas>
 
-<script src="https://cdn.rawgit.com/cx20/gltf-test/7af4f399/libs/babylonjs/3.3.0dev/babylon.max.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/7af4f399/libs/babylonjs/3.3.0dev/babylonjs.loaders.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/7af4f399/libs/babylonjs/3.3.0dev/babylon.glTF2Serializer.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylonjs.loaders.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.glTF2Serializer.js"></script>
 
 
 <script type="text/javascript" src="index.js"></script>
