Changed from rawgit to githack

--- a/cx20/MZ4J/index.html
+++ b/cx20/MZ4J/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- czpg.js -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/91ebb79a/libs/czpg/20180503/czpg.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/czpg/20180503/czpg.js"></script> -->
 <script src="https://cdn.rawgit.com/cx20/gltf-test/a782c9bf/libs/czpg/20180505/czpg.js"></script>
 
 <!-- oimo.js v1.0.9  -->
