Changed from rawgit to githack

--- a/cx20/QFV2/index.html
+++ b/cx20/QFV2/index.html
@@ -15,7 +15,7 @@
 <!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/claygl/20180118/claygl.js"></script> -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/68f48701/libs/claygl/20180122/claygl.js"></script> -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/37b1cd9c/libs/claygl/1.0.1/claygl.js"></script> -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e44309cd/libs/claygl/1.2.1/claygl.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/claygl/1.2.1/claygl.js"></script>
 
 <div id="main"></div>
 
