--- a/cx20/gu06/index.html
+++ b/cx20/gu06/index.html
@@ -15,21 +15,21 @@
 <canvas id="renderCanvas"></canvas>
 
 <!--
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.0.0/babylon.max.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.0.0/babylon.glTFFileLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.0.0/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.0.0/babylon.glTFFileLoader.js"></script>
 -->
 
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.1.0dev/babylon.max.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.1.0dev/babylon.glTFFileLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.glTFFileLoader.js"></script>
 
 <!--
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.2.0dev/babylon.max.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.2.0dev/babylon.glTFFileLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.2.0dev/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.2.0dev/babylon.glTFFileLoader.js"></script>
 -->
 
 <!--
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.3.0dev/babylon.max.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.3.0dev/babylon.glTFFileLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.glTFFileLoader.js"></script>
 -->
 
 
