--- a/cx20/oNe1/index.html
+++ b/cx20/oNe1/index.html
@@ -19,9 +19,9 @@
 <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylonjs.loaders.js"></script>
 <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.glTF2Serializer.js"></script>
 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.3.0dev/babylon.max.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.3.0dev/babylonjs.loaders.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/e03abcf3/libs/babylonjs/3.3.0dev/babylon.glTF2Serializer.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylonjs.loaders.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.glTF2Serializer.js"></script>
 
 
 <script type="text/javascript" src="index.js"></script>
