Changed from rawgit to githack

--- a/cx20/Qr7c/index.html
+++ b/cx20/Qr7c/index.html
@@ -14,7 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- glboost.js r3dev -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/7e912826/libs/glboost/r3dev/glboost.js"></script> -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/353fcf20/libs/glboost/r3dev/glboost.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/glboost/r3dev/glboost.js"></script> -->
 <script src="https://cdn.rawgit.com/cx20/gltf-test/d8b7de91/libs/glboost/r3dev/glboost.js"></script>
 
 <canvas id="world" width="465" height="465"></canvas>
