--- a/cx20/6z4e/index.html
+++ b/cx20/6z4e/index.html
@@ -15,7 +15,7 @@
 <!-- Cesium.js v1.39 -->
 <!-- <script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script> -->
 <!-- Cesium.js v1.41 -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/6ad6272c/libs/cesium/1.41/Cesium.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/cesium/1.41/Cesium.js"></script> -->
 <!-- Cesium.js v1.44 -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/279cba56/libs/cesium/1.44/Cesium.js"></script> -->
 <!-- Cesium.js v1.46 -->
