Changed from rawgit to githack

--- a/cx20/ItxI/index.html
+++ b/cx20/ItxI/index.html
@@ -17,7 +17,7 @@
 
 <!-- gltf-loader.js -->
 <!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v0.223.0-dev/playcanvas-gltf.js"></script> -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/d5ea5002/libs/playcanvas/v0.223.0-dev/playcanvas-gltf.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v0.223.0-dev/playcanvas-gltf.js"></script>
 <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v0.223.0-dev/orbit-camera.js"></script>
 
 <!-- The canvas element -->
