--- a/cx20/aGqk/index.html
+++ b/cx20/aGqk/index.html
@@ -14,14 +14,10 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <canvas id="renderCanvas"></canvas>
 
-<!-- babylon.js v3.1 alpha -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/d25b5dba8e707eaeda208997f8a8a6f874506a21/libs/babylonjs/3.1.0dev/babylon.max.js"></script> -->
-<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.max.js"></script> -->
+<!-- babylon.js v3.1 -->
 <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.max.js"></script>
 
 <!-- babylon.glTFFileLoader.js -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/d25b5dba8e707eaeda208997f8a8a6f874506a21/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script> -->
-<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script> -->
 <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
