--- a/cx20/m7JB/index.html
+++ b/cx20/m7JB/index.html
@@ -14,12 +14,10 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <canvas id="renderCanvas"></canvas>
 
-<!-- babylon.js v3.2 beta  -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/e433d790/libs/babylonjs/3.2.0dev/babylon.max.js"></script> -->
+<!-- babylon.js v3.3 -->
 <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.max.js"></script>
 
 <!-- babylon.glTFFileLoader.js -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/e433d790/libs/babylonjs/3.2.0dev/babylon.glTF2FileLoader.js"></script> -->
 <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.glTF2FileLoader.js"></script>
 
 
