--- a/cx20/UqP9/index.html
+++ b/cx20/UqP9/index.html
@@ -13,9 +13,9 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
-<script src="https://cdn.rawgit.com/cx20/gltf-test/56402cc74517215df53d5495897eb94c87b9d60f/libs/three.js/r89dev/three.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/56402cc74517215df53d5495897eb94c87b9d60f/libs/three.js/r89dev/controls/OrbitControls.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/56402cc74517215df53d5495897eb94c87b9d60f/libs/three.js/r89dev/GLTFLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r89dev/three.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r89dev/controls/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/three.js/r89dev/GLTFLoader.js"></script>
 
 <div id="container"></div>
 
