--- a/cx20/mkHR/index.html
+++ b/cx20/mkHR/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- glboost.js r3dev -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/dd122006/libs/glboost/r3dev/glboost.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/glboost/r3dev/glboost.js"></script>
 
 <canvas id="world" width="465" height="465"></canvas>
 
