--- a/cx20/smSr/index.html
+++ b/cx20/smSr/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- glboost.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/1dbb6e15/libs/glboost/v0.0.4/glboost.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/glboost/v0.0.4/glboost.js"></script>
 
 <script id="vs" type="x-shader/x-vertex">
 precision highp float;
