--- a/cx20/WtR7/index.html
+++ b/cx20/WtR7/index.html
@@ -13,10 +13,10 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- babylon.js v3.1 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/v3.1.0/dist/babylon.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.1.0/dist/babylon.js"></script>
 
 <!-- Cannon.js -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/v3.1.0/dist/cannon.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.1.0/dist/cannon.js"></script>
 
 <div id="rootDiv">
     <!-- Main Canvas -->
