--- a/cx20/sSbw/index.html
+++ b/cx20/sSbw/index.html
@@ -14,10 +14,10 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- babylon.js v3.1 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/v3.1.0/dist/babylon.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.1.0/dist/babylon.js"></script>
 
 <!-- Oimo.js 1.2 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/v3.1.0/dist/Oimo.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.1.0/dist/Oimo.js"></script>
 
 <!-- hand.minified-1.2.js -->
 <!-- <script src="//jsrun.it/assets/f/b/M/D/fbMDN"></script> -->
