--- a/cx20/xBET/index.html
+++ b/cx20/xBET/index.html
@@ -67,7 +67,7 @@ void main()
 </script>
 
 <!-- babylon.js v2.0 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/e9900698/dist/previous%20releases/babylon.2.0.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v4.0.0/dist/previous%20releases/babylon.2.0.js"></script>
 
 <canvas id="renderCanvas"></canvas>
 
