--- a/cx20/0yXZ/index.html
+++ b/cx20/0yXZ/index.html
@@ -37,7 +37,7 @@ void main() {
 <canvas id="renderCanvas"></canvas>
 
 <!-- babylon.js v2.0 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/e9900698/dist/previous%20releases/babylon.2.0.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v4.0.0/dist/previous%20releases/babylon.2.0.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
