--- a/cx20/25mN/index.html
+++ b/cx20/25mN/index.html
@@ -14,7 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- babylon.js v2.0 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/e9900698/dist/previous%20releases/babylon.2.0.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v4.0.0/dist/previous%20releases/babylon.2.0.js"></script>
 
 <canvas id="renderCanvas" width="465" height="465"></canvas>
 
