Changed from rawgit to githack

--- a/cx20/4nrS/index.html
+++ b/cx20/4nrS/index.html
@@ -14,8 +14,8 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- babylon.js v3.3 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/fdda148e26bde7de68a56e29b9bf7c973e6fe5f7/dist/preview%20release/babylon.max.js"></script>
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/fdda148e26bde7de68a56e29b9bf7c973e6fe5f7/dist/preview%20release/loaders/babylon.glTF2FileLoader.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.3.0/dist/preview%20release/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.3.0/dist/preview%20release/loaders/babylon.glTF2FileLoader.js"></script>
 
 <canvas id="renderCanvas"></canvas>
 
