Changed from rawgit to githack

--- a/cx20/0ZaI/index.html
+++ b/cx20/0ZaI/index.html
@@ -14,8 +14,8 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- babylon.js -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/b5f4899d59d7a845d9cc209f5ee8cd165030ca42/dist/preview%20release/babylon.js"></script>
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/b5f4899d59d7a845d9cc209f5ee8cd165030ca42/dist/preview%20release/serializers/babylon.glTF2Serializer.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.2.0/dist/preview%20release/babylon.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.2.0/dist/preview%20release/serializers/babylon.glTF2Serializer.js"></script>
 
 <canvas id="renderCanvas"></canvas>
 
