--- a/cx20/AJDq/index.html
+++ b/cx20/AJDq/index.html
@@ -34,8 +34,7 @@ void main() {
 </script>
 
 <!-- babylon.js v3.3 -->
-<!-- <script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/bfbacb524c2431efc9649855180842038d1433f7/dist/preview%20release/babylon.max.js"></script> -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/2bf0eb77706c7ddec22a03822c2b8ae9eda34de2/dist/preview%20release/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.3.0/dist/preview%20release/babylon.max.js"></script>
 
 <canvas id="renderCanvas"></canvas>
 
