Changed from rawgit to githack

--- a/cx20/0TFG/index.html
+++ b/cx20/0TFG/index.html
@@ -16,7 +16,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r82/three.min.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r81/examples/js/controls/OrbitControls.js"></script>
+<script src="//rawcdn.githack.com/mrdoob/three.js/r81/examples/js/controls/OrbitControls.js"></script>
 
 <!-- cannon.js v0.6.2 -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
