--- a/cx20/K9Me/index.html
+++ b/cx20/K9Me/index.html
@@ -13,10 +13,10 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- three.min.js r81 -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r81/build/three.min.js"></script>
+<script src="//rawcdn.githack.com/mrdoob/three.js/r81/build/three.min.js"></script>
 
 <!-- js/controls/OrbitControls.js -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r81/examples/js/controls/OrbitControls.js"></script>
+<script src="//rawcdn.githack.com/mrdoob/three.js/r81/examples/js/controls/OrbitControls.js"></script>
 
 <div id="container"></div>
 
