--- a/cx20/oLGd/index.html
+++ b/cx20/oLGd/index.html
@@ -14,7 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- three.js r73 -->
 <!-- <script src="http://jsrun.it/assets/A/i/A/4/AiA4M"></script> -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r81/build/three.min.js"></script>
+<script src="//rawcdn.githack.com/mrdoob/three.js/r81/build/three.min.js"></script>
 
 <!-- perlin-noise-simplex.js -->
 <!-- <script src="http://jsrun.it/assets/r/M/r/o/rMrok"></script> -->
@@ -22,7 +22,7 @@
 
 <!-- OrbitControls.js -->
 <!-- <script src="http://jsrun.it/assets/x/C/m/b/xCmbw"></script> -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r81/examples/js/controls/OrbitControls.js"></script>
+<script src="//rawcdn.githack.com/mrdoob/three.js/r81/examples/js/controls/OrbitControls.js"></script>
 
 <!-- ThreeCSG.js -->
 <!-- <script src="http://jsrun.it/assets/m/L/x/k/mLxkE"></script> -->
