Changed from rawgit to githack

--- a/cx20/UfrM/index.html
+++ b/cx20/UfrM/index.html
@@ -17,9 +17,9 @@
 <script src="http://webglsamples.org/WebGL2Samples/samples/third-party/webgl-obj-loader.js"></script>
 <script src="http://webglsamples.org/WebGL2Samples/samples/utility.js"></script>
 -->
-<script src="https://cdn.rawgit.com/WebGLSamples/WebGL2Samples/d15aa91efe4ff7cf9b2fd9758d4fc3b7ae5c14b7/samples/third-party/gl-matrix.js"></script>
-<script src="https://cdn.rawgit.com/WebGLSamples/WebGL2Samples/d15aa91efe4ff7cf9b2fd9758d4fc3b7ae5c14b7/samples/third-party/webgl-obj-loader.js"></script>
-<script src="https://cdn.rawgit.com/WebGLSamples/WebGL2Samples/d15aa91efe4ff7cf9b2fd9758d4fc3b7ae5c14b7/samples/utility.js"></script>
+<script src="https://rawcdn.githack.com/WebGLSamples/WebGL2Samples/d15aa91efe4ff7cf9b2fd9758d4fc3b7ae5c14b7/samples/third-party/gl-matrix.js"></script>
+<script src="https://rawcdn.githack.com/WebGLSamples/WebGL2Samples/d15aa91efe4ff7cf9b2fd9758d4fc3b7ae5c14b7/samples/third-party/webgl-obj-loader.js"></script>
+<script src="https://rawcdn.githack.com/WebGLSamples/WebGL2Samples/d15aa91efe4ff7cf9b2fd9758d4fc3b7ae5c14b7/samples/utility.js"></script>
 
 
 <!-- WebGL 2 shaders -->
