Changed from rawgit to githack

--- a/cx20/8BRk/index.html
+++ b/cx20/8BRk/index.html
@@ -16,7 +16,7 @@
 <script src="https://threejs.org/build/three.min.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="//rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
+<script src="//rawcdn.githack.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
 
 
 <script type="text/javascript" src="index.js"></script>
