--- a/cx20/HappyNewYear2014/index.html
+++ b/cx20/HappyNewYear2014/index.html
@@ -17,7 +17,7 @@
 <!-- TrackballControls.js -->
 <script src="../../assets/7/I/f/5/7If5h.js"></script>
 <!-- Tween.js -->
-<!-- <script src="https://rawgithub.com/sole/tween.js/master/src/Tween.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/sole/tween.js/master/src/Tween.js"></script> -->
 <script src="../../assets/l/c/M/C/lcMCo.js"></script>
 
 <link href='//fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:700' rel='stylesheet' type='text/css' />
