--- a/cx20/QWWf/index.html
+++ b/cx20/QWWf/index.html
@@ -31,7 +31,7 @@
               <MouseCameraControl center = "10"/>
           </camera.components>
         </camera>
-        <model src="https://cdn.rawgit.com/javagl/gltfTutorialModels/master/SimpleOpacity/glTF/SimpleOpacity.gltf" scale="2.0"/> <!-- SimpleOpacity.gltf -->
+        <model src="https://rawcdn.githack.com/javagl/gltfTutorialModels/master/SimpleOpacity/glTF/SimpleOpacity.gltf" scale="2.0"/> <!-- SimpleOpacity.gltf -->
     </scene>
 </goml>
 </script>
