--- a/cx20/bOkq/index.html
+++ b/cx20/bOkq/index.html
@@ -27,8 +27,8 @@ void main() {
 }
 </script>
 
-<script src="https://rawgithub.com/cjcliffe/CubicVR.js/master/dist/CubicVR.min.js"></script>
-<!-- <script src="http://rawgithub.com/cjcliffe/CubicVR.js/master/lib/ammo.js"></script> -->
+<script src="https://rawcdn.githack.com/cjcliffe/CubicVR.js/master/dist/CubicVR.min.js"></script>
+<!-- <script src="https://rawcdn.githack.com/cjcliffe/CubicVR.js/master/lib/ammo.js"></script> -->
 
 <body onLoad="CubicVR.start('auto',webGLStart);">
 
