--- a/cx20/w0MP/index.html
+++ b/cx20/w0MP/index.html
@@ -22,7 +22,7 @@
 <script src="https://rawcdn.githack.com/codemirror/CodeMirror/v3.12/mode/sql/sql.js"></script>
 
 <!-- sql.js -->
-<!-- <script src="https://rawgithub.com/kripken/sql.js/master/js/sql.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/kripken/sql.js/master/js/sql.js"></script> -->
 <script src="https://rawcdn.githack.com/gurjeet/sql.js/6c7c53f07c145626444973ae5dafb2071ee22122/sql.js"></script>
 
 <style type="text/css">
