--- a/cx20/cTcl/index.html
+++ b/cx20/cTcl/index.html
@@ -17,7 +17,7 @@
 <!-- TrackballControls.js -->
 <script src="../../assets/7/I/f/5/7If5h.js"></script>
 <!-- Tween.js -->
-<!-- <script src="http://rawgithub.com/sole/tween.js/master/src/Tween.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/sole/tween.js/master/src/Tween.js"></script> -->
 <script src="../../assets/l/c/M/C/lcMCo.js"></script>
 
 
