--- a/cx20/uEj0/index.html
+++ b/cx20/uEj0/index.html
@@ -20,7 +20,7 @@
 <script src="../../assets/7/I/f/5/7If5h.js"></script>
 
 <!-- Tween.js -->
-<script src="https://rawgithub.com/sole/tween.js/master/src/Tween.js"></script>
+<script src="https://rawcdn.githack.com/sole/tween.js/master/src/Tween.js"></script>
 
 <!--
 <div id="infobar"><p>x-axis = red, y-axis = green, z-axis = blue</p></div>
