[WebGL] RedGL で glTF 2.0形式のデータを表示してみるテスト（その１０）（調整中）

--- a/cx20/yJLW/index.html
+++ b/cx20/yJLW/index.html
@@ -14,7 +14,8 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- <script src="https://cx20.github.io/gltf-test/libs/redgl2/20190114/RedGL.js"></script> -->
 <!-- <script src="https://cx20.github.io/gltf-test/libs/redgl2/20190116/RedGL.js"></script> -->
-<script src="https://cx20.github.io/gltf-test/libs/redgl2/20190118/RedGL.js"></script>
+<!-- <script src="https://cx20.github.io/gltf-test/libs/redgl2/20190118/RedGL.js"></script> -->
+<script src="https://cx20.github.io/gltf-test/libs/redgl2/20200204/RedGL.js"></script>
 
 <canvas id="canvas"></canvas>
 
