Changed library reference from jsrun.it to github

--- a/cx20/jMo5/index.html
+++ b/cx20/jMo5/index.html
@@ -15,7 +15,7 @@
 <canvas id="c" width="465" height="465"></canvas>
 
 <!-- babylon.js v2.2 -->
-<script src="//jsrun.it/assets/y/H/P/p/yHPpU"></script>
+<script src="../../assets/y/H/P/p/yHPpU.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
