--- a/cx20/WVW3/index.html
+++ b/cx20/WVW3/index.html
@@ -21,7 +21,7 @@
 <!-- <script src="//jsrun.it/assets/n/L/V/q/nLVqp"></script> -->
 
 <!-- babylon.js v2.2 -->
-<script src="//jsrun.it/assets/y/H/P/p/yHPpU"></script>
+<script src="../../assets/y/H/P/p/yHPpU.js"></script>
 
 
 <script type="text/javascript" src="index.js"></script>
