--- a/cx20/UF52/index.html
+++ b/cx20/UF52/index.html
@@ -15,7 +15,7 @@
 <!-- x3dom.js -->
 <!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/x3dom/1.7.3dev/x3dom.js"></script> -->
 <!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/x3dom/1.7.3dev/x3dom.js"></script> -->
-<script src="https://rawcdn.githack.com/cx20/gltf-test/414bbe9d34d6d07e87594dd84831c11b8530f4cb/libs/x3dom/1.7.3dev/x3dom.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/6d53332f7c572f33e7b360a43984c435d3191a15/libs/x3dom/1.8.1/x3dom.js"></script>
 
 <x3d id="x3d" width="100%" height="100%"> 
     <scene>
