Changed to use PlayCanvas's built-in glTF Loader

--- a/cx20/yh4S/index.html
+++ b/cx20/yh4S/index.html
@@ -14,10 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- playcanvas.js -->
-<script src="https://code.playcanvas.com/playcanvas-latest.js"></script>
-
-<!-- gltf-loader.js -->
-<script src="https://rawcdn.githack.com/playcanvas/playcanvas-gltf/5489ff62/src/gltf-loader.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/playcanvas/v1.27.0-dev/playcanvas-latest.js"></script>
 
 <!-- The canvas element -->
 <canvas id="application"></canvas>
